--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
 
         <!-- OBSTACLES -->
-        <div class="obstacles-area" key="uniqueKey">
+        <div class="obstacles-area">
             <!-- Add on fly -->
         </div>
 
